<resources>
    <string name="app_name">Work Manager</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_ha">ha</string>
    <string name="_yoq">yo\'q</string>
    <string name="bosh">bo\'sh</string>
    <string name="xatolik">xatolik</string>
    <string name="student">student</string>
    <string name="mentor">mentor</string>
    <string name="guest">guest</string>
    <string name="xato">xatolik</string>
    <string name="permissions"><![CDATA[permissions >]]></string>
    <string name="work">Work</string>
    <string name="manager">Manager</string>
    <string name="submit">Submit</string>
    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password?</string>
    <string name="regstartion">Regstartion</string>
    <string name="my_first">My first</string>
    <string name="first_name">First name</string>
    <string name="name_is">name is</string>
    <string name="this_is_how_it_will_appear_in_work_manager">This is how it will appear in Work Manager</string>
    <string name="next">Next</string>
    <string name="my_second">My second</string>
    <string name="second_name">Second name</string>
    <string name="my_birthday">My birthday</string>
    <string name="is">is</string>
    <string name="what_s_your">What’s your</string>
    <string name="email">email?</string>
    <string name="create_a">Create a</string>
    <string name="i_am_a">I am a</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="staff">Staff</string>
    <string name="gapiring">Speak...</string>
    <string name="username">username</string>
    <string name="phone_number">phone number</string>
    <string name="id">id</string>
    <string name="_000_000">000,000</string>
    <string name="user">User</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="top">Top</string>
</resources>