<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="401dp"
        android:layout_height="310dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgelogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ediregpass"
            android:layout_width="274dp"
            android:layout_height="70dp"
            android:background="@drawable/backgraundtext"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword"
            android:maxLength="6"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/ediregemail"
        android:layout_width="274dp"
        android:layout_height="70dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/backgraundtext"
        android:ems="10"
        android:hint="@string/gmail"
        android:inputType="textEmailSubject"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        tools:ignore="TextFields" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="274dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/backgraundbutton"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnsubmit1"
        app:layout_constraintEnd_toEndOf="@+id/btnsubmit1"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/btnsubmit1" />

    <Button
        android:id="@+id/btnsubmit1"
        android:layout_width="274dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/backgraundbutton"
        android:text="@string/regstartion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/txtresetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
    <ProgressBar
        android:id="@+id/progressBarlog"
        style="?android:attr/progressBarStyle"
        android:layout_width="108dp"
        android:layout_height="104dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>