<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fon">

        <Button
            android:id="@+id/btnfrg5next2"
            android:layout_width="274dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/backgraundbutton"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textColor="@color/black"
            android:layout_marginTop="108dp"
            android:text="@string/i_am_a"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backicon" />

        <View
            android:id="@+id/view2"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/backgraundbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <View
            android:id="@+id/view4"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/backgraundbutton"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view5"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/backgraundbutton"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <View
            android:id="@+id/view6"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/backgraundbutton"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/imgemale" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4"
            app:layout_constraintVertical_bias="0.65"
            app:srcCompat="@drawable/imgefemale" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/man"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/woman"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/view5" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/view6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>