<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swiperefleshhome">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/fon"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view9"
                android:layout_width="344dp"
                android:layout_height="184dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/backgraundtext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtsamusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/view9"
                app:layout_constraintTop_toTopOf="@+id/view9" />

            <TextView
                android:id="@+id/txtsamphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtsamusername"
                app:layout_constraintTop_toBottomOf="@+id/txtsamusername" />

            <TextView
                android:id="@+id/txtsamid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtsamusername"
                app:layout_constraintTop_toBottomOf="@+id/txtsamphone" />

            <TextView
                android:id="@+id/txtsamcoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/_000_000"
                android:textColor="@color/jigarrang"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="48dp"
                android:layout_height="42dp"
                android:layout_marginStart="160dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/view9"
                app:layout_constraintStart_toStartOf="@+id/view9"
                app:srcCompat="@drawable/astrocoinimg"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view3"
                android:layout_width="57dp"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:background="@color/qoraroq"
                app:layout_constraintEnd_toEndOf="@+id/view9"
                app:layout_constraintTop_toTopOf="@+id/view9" />

            <View
                android:id="@+id/view8"
                android:layout_width="57dp"
                android:layout_height="3dp"
                android:layout_marginTop="36dp"
                android:background="@color/qoraroq"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view9" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="344dp"
                android:layout_height="393dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="@+id/view9"
                app:layout_constraintStart_toStartOf="@+id/view9"
                app:layout_constraintTop_toBottomOf="@+id/view9"
                app:srcCompat="@drawable/ic_chartt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>